# choosing_electives

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  my_environ.py  nginx.conf  pyproject.toml  report.md  requirements-dev.txt  requirements.txt  setup.cfg  static.dockerfile  tables.xlsx
.github/workflows/: django.yml
apps/electives/: admin.py  apps.py  elective_statistic.py  logic.py  models.py  signals.py  urls.py  views.py
apps/groups/: models.py
apps/parsing/: admin.py  apps.py  courses_table_parsing.py  forms.py  generate_results.py  models.py  table_parsing.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
choosing_electives/: asgi.py  settings.py  urls.py  views.py  wsgi.py
deploy/: config.yaml  database.yaml
deploy/templates/: deployment.yaml.j2  ingress.yaml.j2  service.yaml.j2
electives/: admin.py  apps.py  controller.py  elective_statistic.py  logic.py  models.py  signals.py  urls.py  views.py
electives/migrations/: 0001_initial.py  0002_alter_electivekind_credit_units.py  0002_initial.py  0002_studentonelectve_teacheronelectve.py  0003_auto_20210717_1204.py  (+23 more)
groups/: admin.py  models.py
parsing/: courses_table_parsing.py
pre-presentation/: beamercolorthemestanford.sty
presentation/: beamerthemeStanford.sty
report_info/: main.tex  report.md
server/: urls.py
static/: favicon-mkn.png~
static/css/: main.css  (+2 more)
templates/: base.html  help.html  language_switcher.html  navbar.html
users/: forms.py  models.py  urls.py  views.py
(+130 files in other folders)
